# scissor

./: .gitignore  README.md  app.py  cache.py  main.py  pyproject.toml  requirements.txt
api/: __init__.py
api/v1/resources/: auth.py  shorten_url.py  user.py
config/: default.py
models/: base_model.py  short_url.py  user.py
tests/: conftest.py  test_a.py  test_auth.py  test_url.py
utils/: depend.py
web/: forms.py  short_url.py  webAuth.py
web/static/: swagger copy.json  swagger.json
web/static/css/: authStyle.css  input.js
web/templates/: 404.html  history.html  index.html  layout.html  login.html  profile.html  signup.html  url.html
